# googletest-travis-ci

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  algo.cpp  algo.h  main.cpp
ci/: coverage.sh  dependencies.sh  run_tests.sh
tests/: google_test.cpp
